Fixed alignment of books for small resolution

--- a/src/components/books/books.css
+++ b/src/components/books/books.css
@@ -1,5 +1,6 @@
 #content #books {
     width: 100%;
+    display: flex;
 }
 
 #content #books .container {
